[gd_scene load_steps=41 format=2]

[ext_resource path="res://sprites/act3settings/homewall.png" type="Texture" id=1]
[ext_resource path="res://sprites/act3settings/lights/redl.png" type="Texture" id=2]
[ext_resource path="res://act3/scene2/test.gd" type="Script" id=3]
[ext_resource path="res://sprites/act3settings/lights/bluel.png" type="Texture" id=4]
[ext_resource path="res://sprites/act3settings/lights/bluelconnect.png" type="Texture" id=5]
[ext_resource path="res://sprites/act3settings/lights/socket.png" type="Texture" id=6]
[ext_resource path="res://sprites/act3settings/lights/redlconnect.png" type="Texture" id=7]
[ext_resource path="res://sprites/act3settings/lights/redlselect.png" type="Texture" id=8]
[ext_resource path="res://sprites/act3settings/lights/bluelselect.png" type="Texture" id=9]
[ext_resource path="res://sprites/act3settings/lights/yellowlselect.png" type="Texture" id=10]
[ext_resource path="res://sprites/act3settings/lights/yellowlconnect.png" type="Texture" id=11]
[ext_resource path="res://sprites/act3settings/lights/yellowl.png" type="Texture" id=12]
[ext_resource path="res://sprites/act3settings/lights/greenl.png" type="Texture" id=13]
[ext_resource path="res://sprites/act3settings/lights/greenlselect.png" type="Texture" id=14]
[ext_resource path="res://sprites/act3settings/lights/greenlconnect.png" type="Texture" id=15]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://smolplayer.tscn" type="PackedScene" id=17]
[ext_resource path="res://sprites/Act1settings/sceneone/dark filter.png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "select",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "connect",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 43.2356, 22.9624 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "select",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "connect",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 30.8325, 21.5556 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "select",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "connect",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 75.5889, 19.2111 )

[sub_resource type="DynamicFont" id=9]
size = 100
font_data = ExtResource( 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "select",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "connect",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 73.1868, 28.8184 )

[sub_resource type="DynamicFont" id=12]
size = 100
font_data = ExtResource( 16 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 90.8032, 84.8211 )

[sub_resource type="DynamicFont" id=14]
size = 100
font_data = ExtResource( 16 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 113.503, 89.0074 )

[sub_resource type="DynamicFont" id=16]
size = 100
font_data = ExtResource( 16 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 70.23, 69.4769 )

[sub_resource type="DynamicFont" id=18]
size = 100
font_data = ExtResource( 16 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 84.7775, 83.2284 )

[sub_resource type="DynamicFont" id=20]
size = 100
font_data = ExtResource( 16 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 123.595, 1003.67 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 761.824, 46.3231 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1914.56, 1094.04 )
scale = Vector2( 1.28491, 1.68588 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1913.53, 1055.44 )
scale = Vector2( 1.35033, 1.29564 )
texture = ExtResource( 6 )

[node name="red" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="red"]
position = Vector2( 1902.99, 1009.11 )
scale = Vector2( 1.36741, 1.1852 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="red"]
position = Vector2( 2532.47, 1301.77 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="red"]
margin_left = 2390.0
margin_top = 1142.89
margin_right = 2646.0
margin_bottom = 1242.89
custom_fonts/font = SubResource( 3 )
text = "Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blue" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="blue"]
position = Vector2( 1909.71, 1041.04 )
scale = Vector2( 1.34475, 1.18447 )
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="blue"]
position = Vector2( 2533.46, 461.19 )
shape = SubResource( 5 )

[node name="Label" type="Label" parent="blue"]
margin_left = 2376.83
margin_top = 306.321
margin_right = 2632.83
margin_bottom = 406.321
custom_fonts/font = SubResource( 6 )
text = "Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yellow" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="yellow"]
position = Vector2( 1909.37, 1077.22 )
scale = Vector2( 1.35357, 1.258 )
frames = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="yellow"]
position = Vector2( 2569.06, 831.598 )
shape = SubResource( 8 )

[node name="Label" type="Label" parent="yellow"]
margin_left = 2437.23
margin_top = 649.241
margin_right = 2693.23
margin_bottom = 749.241
custom_fonts/font = SubResource( 9 )
text = "Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="green" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="green"]
position = Vector2( 1912.89, 1068.75 )
scale = Vector2( 1.35015, 1.25008 )
frames = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="green"]
position = Vector2( 2536.52, 1756.02 )
shape = SubResource( 11 )

[node name="Label" type="Label" parent="green"]
margin_left = 2457.84
margin_top = 1592.19
margin_right = 2713.84
margin_bottom = 1692.19
custom_fonts/font = SubResource( 12 )
text = "Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="redconnect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="redconnect"]
position = Vector2( 1357.96, 396.499 )
shape = SubResource( 13 )

[node name="Label" type="Label" parent="redconnect"]
margin_left = 1174.82
margin_top = 185.497
margin_right = 1522.82
margin_bottom = 285.497
custom_fonts/font = SubResource( 14 )
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" parent="." instance=ExtResource( 17 )]

[node name="blueconnect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="blueconnect"]
position = Vector2( 1373.25, 861.218 )
shape = SubResource( 15 )

[node name="Label" type="Label" parent="blueconnect"]
margin_left = 1174.82
margin_top = 633.783
margin_right = 1522.82
margin_bottom = 733.783
custom_fonts/font = SubResource( 16 )
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yellowconnect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="yellowconnect"]
position = Vector2( 1327.56, 1728.06 )
shape = SubResource( 17 )

[node name="Label" type="Label" parent="yellowconnect"]
margin_left = 1118.14
margin_top = 1468.52
margin_right = 1466.14
margin_bottom = 1568.52
custom_fonts/font = SubResource( 18 )
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="greenconnect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="greenconnect"]
position = Vector2( 1359.9, 1334.14 )
shape = SubResource( 19 )

[node name="Label" type="Label" parent="greenconnect"]
margin_left = 1164.51
margin_top = 1118.14
margin_right = 1512.51
margin_bottom = 1218.14
custom_fonts/font = SubResource( 20 )
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 1824.97, 1107.38 )
scale = Vector2( 1.44295, 1.0753 )
texture = ExtResource( 18 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 1824.97, 1107.38 )
scale = Vector2( 1.44295, 1.0753 )
texture = ExtResource( 18 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1138.46, 1034.97 )
shape = SubResource( 21 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2699.54, 1052.22 )
shape = SubResource( 21 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1888.81, 60.373 )
shape = SubResource( 22 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1931.94, 2052.68 )
shape = SubResource( 22 )

[connection signal="body_entered" from="red" to="." method="_on_red_body_entered"]
[connection signal="body_exited" from="red" to="." method="_on_red_body_exited"]
[connection signal="body_entered" from="blue" to="." method="_on_blue_body_entered"]
[connection signal="body_exited" from="blue" to="." method="_on_blue_body_exited"]
[connection signal="body_entered" from="yellow" to="." method="_on_yellow_body_entered"]
[connection signal="body_exited" from="yellow" to="." method="_on_yellow_body_exited"]
[connection signal="body_entered" from="green" to="." method="_on_green_body_entered"]
[connection signal="body_exited" from="green" to="." method="_on_green_body_exited"]
[connection signal="body_entered" from="redconnect" to="." method="_on_redconnect_body_entered"]
[connection signal="body_exited" from="redconnect" to="." method="_on_redconnect_body_exited"]
[connection signal="body_entered" from="blueconnect" to="." method="_on_blueconnect_body_entered"]
[connection signal="body_exited" from="blueconnect" to="." method="_on_blueconnect_body_exited"]
[connection signal="body_entered" from="yellowconnect" to="." method="_on_yellowconnect_body_entered"]
[connection signal="body_exited" from="yellowconnect" to="." method="_on_yellowconnect_body_exited"]
[connection signal="body_entered" from="greenconnect" to="." method="_on_greenconnect_body_entered"]
[connection signal="body_exited" from="greenconnect" to="." method="_on_greenconnect_body_exited"]
